--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- <li><i class="fa fa-envelope"></i></li> -->
 						<li><a href="mailto:shwetarkadam25@gmail.com" class="fa fa-envelope"></a></li>
 							</ul>
-					<p class="copyright">© Shweta Kadam Design: HTML5 UP.</p>
+					<p class="copyright">© Shweta Kadam.</p>
 				</footer>
 
 			</div>
