--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Shweta Kadam</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="image/png" href="images/logo-favicon.ico"/>
+		<link rel="icon" type="image/png" href="images/logo-sk.png"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		
@@ -19,7 +19,7 @@
 					<header id="header">
 						<div class="logo">
 							<!-- <span class="icon fa-gem"></span> -->
-						<img style="width:90%;height: 90%;padding-top: 5px;"  src="images/logo.png" alt="" />
+						<img style="width:90%;height: 90%;padding-top: 6px;padding-right:7px;"  src="images/logo-sk.png" alt="" />
 						</div>
 						<div class="content">
 							<div class="inner">
