Change dialogue on home page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<div class="inner">
 								<h1>Shweta Kadam</h1>
 								<p>Hi! I'm Shweta Kadam.I'm a software engineer from Mumbai.<br />
-								learning new things as i go.</p>
+								learning new things as i do my best!</p>
 							</div>
 						</div>
 						<nav>
