Adding Resume icon in Home Page
Adding Resume icon in Home Page

--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- <li><a href="https://dev.to/shwetarkadam" class="icon brands fab fa-dev" target="_blank"><span class="label">Dev.to</span></a></li> -->
 						<li><a href="https://medium.com/@shwetarkadam25" class="icon brands fab fa-medium" target="_blank"><span class="label">Medium</span></a></li>
 						<!-- <li><i class="fa fa-envelope"></i></li> -->
+						<li><a href="assets\resume\Shweta Kadam-Resume.pdf" class="fa fa-download"></a></li>
 						<li><a href="mailto:shwetakadam.portfolio@gmail.com" class="fa fa-envelope"></a></li>
 							</ul>
 					<p class="copyright">© Shweta Kadam.</p>
